[package]
name = "klntsky-1"
version = "0.1.0"
authors = ["klntsky <klntsky@gmail.com>"]
edition = "2018"

[dependencies]
pom = "3.1.0"
futures = "0.3.4"
tokio = { version = "0.2.11", features = ["full"] }
tokio-util = { version = "0.2.0", features = ["codec"] }
bytes = "0.5.4"
rustyline = "6.0.0"
combine = "4.0.1"
async-trait = "0.1.24"
